--- a/install
+++ b/install
@@ -1,2 +1,56 @@
 #!/bin/bash
-python3 install.py
+
+# while-menu-dialog: a menu driven system information program
+
+DIALOG_CANCEL=1
+DIALOG_ESC=255
+HEIGHT=0
+WIDTH=0
+
+display_result() {
+  dialog --title "$1" \
+    --no-collapse \
+    --msgbox "$result" 0 0
+}
+
+while true; do
+  exec 3>&1
+  selection=$(dialog \
+    --backtitle "Walter's Gentoo Installer" \
+    --title "Menu" \
+    --clear \
+    --cancel-label "Exit" \
+    --menu "Please select:" $HEIGHT $WIDTH 4 \
+    "1" "Get network information" \
+    "2" "Get drive information" \
+    "3" "Partition drives" \
+    2>&1 1>&3)
+  exit_status=$?
+  exec 3>&-
+  case $exit_status in
+    $DIALOG_CANCEL)
+      clear
+      echo "Program terminated."
+      exit
+      ;;
+    $DIALOG_ESC)
+      clear
+      echo "Program aborted." >&2
+      exit 1
+      ;;
+  esac
+  case $selection in
+    1 )
+      result=$(ip a)
+      display_result "Network addresses"
+      ;;
+    2 )
+      result=$(df -h)
+      display_result "Disk usage"
+      ;;
+    3 )
+        bash scripts/diskpart.sh
+
+      ;;
+  esac
+done
