--- a/install
+++ b/install
@@ -83,6 +83,11 @@ while true; do
 
       ;;
     8 )
+        cd
+        umount -l /mnt/gentoo/dev{/shm,/pts,}
+        umount -R /mnt/gentoo
+        result="Press OK to reboot..."
+        display_result "Info"
         reboot
 
       ;;
